# competition-solution

./: README.md  pyproject.toml
atma-11/: .gitignore  README.md
atma-11/colab/: run.ipynb
atma-11/exp/: exp00_base.py  exp01_simsiam.py
atma-11/notebooks/: .gitignore  exp00_postprocess.ipynb  exp01_simsiam.ipynb
google-colab/: run.ipynb
kaggle-google-brain/: .gitignore  README.md  command.sh
kaggle-google-brain/exp/: exp00_lstm.py  exp01_lstm_pl.py
kaggle-google-brain/notebooks/: v0.0.00_EDA.ipynb  v0.0.01_exp01_lstmcheck.ipynb
kaggle-google-brain/src/scripts/: command.sh  jupyter_notebook_config.py
kaggle-rfcx/: README.md
kaggle-rfcx/exp/: exp00_stage1.py
