[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.3"
pandas = "^1.3.4"
jupyter = "^1.0.0"
ipython = "^7.29.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
